Feat: improvements about codeslist (#2)